update it as personal

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Ricoh_logo_2012.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/2.png" sizes="16x16" />
     <!-- <link rel="icon" type="image/png" href="/Ricoh_logo_2012_32x32.png" sizes="32x32" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ricoh Philippines Forumn</title>
